<resources>
    <string name="app_name">DragLauncher</string>
    <string name="folder_name">Folder name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="add_folder">Add folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="applications">Applications</string>
    <string name="search_apps_or_surf_internet">Search apps or surf internet</string>
    <string name="search">Search</string>
    <string name="choose_application">Choose application</string>
    <string name="back">Back</string>
    <string name="edit_mode">Edit mode</string>
    <string name="home">Home</string>
    <string name="enter">Enter</string>
    <string name="delete">Delete</string>
    <string name="rename">Edit link</string>
    <string name="action">Action</string>
    <string name="app">Application</string>
    <string name="folder">Folder</string>
    <string name="ime_linka">Link name</string>
    <string name="intent_linka">Link intent</string>
    <string name="zavr_i">Finish</string>
    <string name="edit_link">Edit link</string>
    <string name="loading">Loading…</string>
    <string name="intro_message">Hi, user. This app is still in development, so don\'t be cruel on reviews. Share your feedback with me via email if you want and happy navigating! \n\nEmail: ingokodba@gmail.com</string>
    <string name="actions_todo_message">This feature is not yet implemented. It will be possible to </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ui_design">UI</string>
    <string name="show_circles">Show empty circles</string>
    <string name="primary_color">Primary color</string>
    <string name="shadow">Show shadow</string>
    <string name="circle_border_width">Circles border width</string>
    <string name="text_size">Text size</string>
    <string name="smaller_text_size">Smaller text size</string>
    <string name="icons">Show icons</string>
    <string name="settings_im_ex">Settings import/export</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="feedback_title">Send feedback via email</string>
    <string name="help">Help</string>
    <string name="export_title">Export configuration</string>
    <string name="export_summary">Export your current configuration</string>
    <string name="import_summary">Import configuration from files</string>
    <string name="import_title">Import configuration</string>
    <string name="restart_required">Restart required.</string>
    <string name="restart">Restart</string>
    <string name="one_line_bottom_menu_buttons">One-line bottom menu buttons</string>
    <string name="slide">Slide...</string>
    <string name="backbutton_title">What happens on back button press</string>
    <string name="backbutton_summary">List of applications vs search</string>
    <string name="border_width_summary">Default is 4</string>
    <string name="pick">Pick</string>
    <string name="what_would_you_like_to_add">What would you like to add?</string>
    <string name="search_to_scroll">Search to scroll</string>
    <string name="drag_and_drop_app">Adding new app shortcut</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="open_default_apps">Default launcher app</string>
    <string name="wizard_yes_no">Do you want to use Wizard to automatically populate home screen with apps?</string>
    <string name="odaberi_boju">Choose a color</string>
    <string name="adding_a_folder">Adding a folder</string>
    <string name="editing_a_folder">Editing folder</string>
    <string name="ui_show_app_names">Show application names</string>
    <string name="add_app">Add app</string>
    <string name="app_info">App info</string>
    <string name="transparency">Transparency</string>
    <string name="show_big_circle">Show big circle</string>
    <string name="favorite">Favorite</string>
    <string name="add_to_home">Add to home</string>
    <string name="circle_preferences">Circle preferences</string>
    <string name="rainbow_preferences">Preferences for curved design</string>
    <string name="preferences">Preferences</string>
    <string name="general_preferences">General preferences</string>
    <string name="adjust_design">Adjust design</string>
    <string name="dizajn_po_etnog_zaslona">Launcher style</string>
    <string name="restart_application">Restart application</string>
    <string name="drop_database">Drop application database</string>
    <string name="slider_app_spacing">App spacing</string>
    <string name="slider_circle_size">Circle size</string>
    <string name="slider_arc_position">Arc position</string>
    <string name="show_only_favorites">Show only favorite apps</string>
    <string name="settings">Settings</string>
    <string name="set_this_launcher_as_default_to_access_shortcuts">Set this launcher as default to access shortcuts</string>
    <string name="color_text_size_border_width_hide_icons_hide_text">Color, text size, border width, hide icons, hide text</string>
    <string name="jezik_vrsta_launchera_tamni_na_in">Language, dark mode</string>
    <string name="restartaj_aplikaciju_po_alji_povratnu_informaciju_izbri_i_bazu_podataka">Restart application, send feedback, delete database</string>
    <string name="rename_folder">Rename folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_folder">Add to folder</string>
    <string name="remove_from_folder">Remove from folder</string>
    <string name="debljina_ruba">Border width</string>
    <string name="alphabet_font_size">Alphabet font size</string>
    <string name="application_names_font_size">Application names font size</string>
    <string name="color_on_primary">Button icon tint</string>
    <string name="save">Save</string>

</resources>