<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="ui_design"
        app:title="@string/ui_design">

        <SwitchPreference
            app:key="ui_language_toggle"
            app:title="English/Croatian"
            app:defaultValue="false"/>

        <SwitchPreference
            app:key="ui_circles_toggle"
            app:title="@string/show_circles"
            app:defaultValue="true"/>

        <SwitchPreference
            app:key="ui_dark_mode"
            app:title="@string/dark_mode"
            app:defaultValue="false"/>

        <Preference
            app:key="ui_color"
            app:title="@string/primary_color"/>

        <SwitchPreference
            app:key="ui_shadow_toggle"
            app:title="@string/shadow"
            app:defaultValue="true"/>

        <EditTextPreference
            app:key="ui_border_width"
            app:title="@string/border_width"
            app:summary="@string/border_width_summary"
            app:defaultValue="4"/>

        <SwitchPreference
            app:key="ui_icons_toggle"
            app:title="@string/icons"
            app:defaultValue="true"/>

        <SwitchPreference
            app:key="ui_oneline_buttons_toggle"
            app:title="@string/one_line_bottom_menu_buttons"
            app:defaultValue="false"/>

        <SwitchPreference
            app:key="ui_backbutton_toggle"
            app:title="@string/backbutton_title"
            app:summary="@string/backbutton_summary"
            app:defaultValue="false"/>

    </PreferenceCategory>

    <!--<PreferenceCategory
        app:key="export_category"
        app:title="@string/settings_im_ex">

        <Preference
            app:key="import"
            app:summary="@string/import_summary"
            app:title="@string/import_title"/>

        <Preference
            app:key="export"
            app:summary="@string/export_summary"
            app:title="@string/export_title"/>

    </PreferenceCategory>-->

    <PreferenceCategory
        app:key="help_category"
        app:title="@string/help">

        <Preference
            app:key="restart"
            app:title="Restart application"/>

        <Preference
            app:key="drop_database"
            app:title="Drop database"/>

        <Preference
            app:key="feedback"
            app:summary="@string/feedback_summary"
            app:title="@string/feedback_title"/>

    </PreferenceCategory>

</PreferenceScreen>