<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:iconSpaceReserved="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:key="ui_color"
        app:title="@string/primary_color"
        android:icon="@drawable/baseline_color_lens_24"/>

    <SwitchPreference
        app:key="ui_color_on_primary"
        app:title="@string/color_on_primary"
        android:summary="Black (OFF) or white (ON)"
        android:icon="@drawable/baseline_color_lens_24"/>

    <EditTextPreference
        app:key="ui_smaller_text_size"
        app:title="@string/application_names_font_size"
        app:defaultValue="30"
        android:icon="@drawable/baseline_format_size_24"/>

    <EditTextPreference
        app:key="ui_text_size"
        app:title="@string/alphabet_font_size"
        app:defaultValue="30"
        android:icon="@drawable/baseline_format_size_24"/>

    <EditTextPreference
        app:key="ui_border_width"
        app:title="@string/debljina_ruba"
        app:defaultValue="4"
        android:icon="@drawable/baseline_line_style_24"/>

    <SwitchPreference
        app:key="ui_icons_toggle"
        app:title="@string/icons"
        app:defaultValue="true"/>

    <SwitchPreference
        app:key="ui_show_app_names"
        app:title="@string/ui_show_app_names"
        app:defaultValue="true"/>

    <SwitchPreference
        app:key="ui_shadow_toggle"
        app:title="@string/shadow"
        app:defaultValue="true"/>




</PreferenceScreen>