<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="15dp">
    <EditText
        android:id="@+id/popup_folder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/folder_name"
        android:inputType="text|textCapSentences"
        android:textSize="25sp"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/popup_folder_submit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/add_folder"
        style="@style/Widget.Shrine.Button"
        android:layout_marginHorizontal="5dp"
        android:padding="20dp"/>
    <Button
        android:id="@+id/popup_folder_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel"
        style="@style/Widget.Shrine.Button"
        android:layout_marginHorizontal="5dp"
        android:padding="20dp"/>
    </LinearLayout>
</LinearLayout>