<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="16dp"
            android:paddingStart="6dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_baseline_close_50" />
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/id_linka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>
            <EditText
                android:id="@+id/labela"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ime_linka"/>
            <EditText
                android:id="@+id/intent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intent_linka"/>
            <!--<com.google.android.material.textfield.TextInputLayout
                android:id="@+id/labela_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Naziv linka">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/labela"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences"
                    android:imeActionId="2" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Akcija linka (intent)">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/intent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine|textCapSentences"
                    android:imeOptions="actionDone"
                    android:minLines="5"
                    android:lines="5"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:gravity="top|start" />
            </com.google.android.material.textfield.TextInputLayout>-->
            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zavr_i"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:gravity="center"
                style="@style/Widget.Shrine.Button"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>