<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ingokodba.dragnav.ActivitiesFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:id="@+id/recycle_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorSurface"
        android:padding="20dp">
        <TextView
            android:id="@+id/recycle_view_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_application"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:textSize="35sp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/settings"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/meni_jedno_polje_obrub"
                android:textSize="17sp"
                android:padding="10dp"
                tools:text=""
                android:inputType="text"
                android:hint="@string/search_apps_or_surf_internet"
                android:imeOptions="actionGo"
                android:layout_marginBottom="5dp"/>
            <ImageButton
                android:id="@+id/settings"
                android:layout_width="50sp"
                android:layout_height="50sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/search_bar"
                app:layout_constraintRight_toRightOf="parent"
                android:scaleType="centerCrop"
                android:padding="0dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_settings_100" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/popis_svih_aplikacija"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:visibility="visible">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager=
                    "androidx.recyclerview.widget.GridLayoutManager"/>
                <!--android:scrollbars="vertical"
                app:fastScrollEnabled="true"
                app:fastScrollVerticalThumbDrawable="@drawable/fast_scroll_thumb"
                app:fastScrollVerticalTrackDrawable="@drawable/fast_scroll_track"
                app:fastScrollHorizontalThumbDrawable="@drawable/fast_scroll_thumb"
                app:fastScrollHorizontalTrackDrawable="@drawable/fast_scroll_track"-->
            <com.ingokodba.dragnav.RecycleScroller
                android:id="@+id/recycle_scroller"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"/>
        </FrameLayout>
        <LinearLayout
            android:id="@+id/trazilica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applications"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:textColor="?attr/colorOnSurface"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorOnSurface"/>
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup_aplikacije"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>