<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ingokodba.dragnav.MainFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/relativelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5"
            android:gravity="right">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/selected_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    style="@style/TextShadowStyle"
                    android:singleLine="true"
                    android:autoSizeTextType="uniform"
                    android:text="@string/loading"
                    android:textColor="@color/white"/>
                <com.ingokodba.dragnav.CircleView
                    android:id="@+id/circleview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/normalMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="5"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="bottom">
                <ImageButton
                    android:id="@+id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    style="@style/TextShadowStyle2"
                    android:src="@drawable/ic_baseline_settings_100" />
                <ImageButton
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_edit_24" />
                <ImageButton
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_search_50" />
                <ImageButton
                    android:id="@+id/list"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_list_100" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/editMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="4"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">
                <ImageButton
                    android:id="@+id/rename"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="Rename"
                    android:src="@drawable/ic_baseline_drive_file_rename_outline_24" />
                <ImageButton
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="Delete"
                    android:src="@drawable/ic_baseline_delete_24" />
                <ImageButton
                    android:id="@+id/enter"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="Enter"
                    android:src="@drawable/door_open" />
                <ImageButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:padding="0dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="Exit editing"
                    android:src="@drawable/ic_baseline_close_50" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <com.ingokodba.dragnav.BottomMenuView
        android:id="@+id/bottomMenuView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/addingMenuCancelOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:padding="30dp">
        <Button
            android:id="@+id/cancelAddingApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:padding="30dp"
            android:layout_marginRight="15dp"
            style="@style/MojButton"/>
        <Button
            android:id="@+id/addApp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:padding="30dp"
            android:layout_marginLeft="15dp"
            style="@style/MojButton"/>
    </LinearLayout>

</FrameLayout>